2008-06-09  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer-db.[ch] (tracker_db_set_text):
	New function, saves text into the content database.
	* src/tracker-indexer/tracker-indexer.c (init_indexer): create content
	database.
	(process_file): get text content and store it in the database.
	(tracker_indexer_finalize): Do not unref here the database
	connections, they're already taken care of by the DB manager.

2008-06-09  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-manager.c (function_compress_string)
	(function_compress): Added, database function to compress a passed
	string using zlib.
	(db_interface_get_file_contents) (db_interface_get_email_contents):
	Create that function for these database connections.
	* data/sqlite-stored-procs.sql (SaveServiceContents): Use compress(),
	so the indexer code doesn't have to compress the contents itself.

2008-06-09  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-manager.c (set_up_databases)
	(db_interface_create) (tracker_db_manager_init)
	(tracker_db_manager_shutdown) (tracker_db_manager_get_db_interface)
	(tracker_db_manager_get_db_interface_content): Allow creating
	databases lazily, instead of creating them all on initialization.

2008-06-09  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-manager.c:
	* src/trackerd/tracker-db.c: 
	* src/trackerd/tracker-indexer.c:
	* src/trackerd/tracker-main.[ch]: Removed more unused members from
	the Tracker struct.

2008-06-09  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-files.c:
	* src/trackerd/tracker-keywords.c:
	* src/trackerd/tracker-main.[ch]:
	* src/trackerd/tracker-metadata.c: 
	* src/trackerd/tracker-utils.c: 
	* src/trackerd/tracker-watcher-inotify.c: Removed unused threading code.

2008-06-09  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-main.c: initialise_directories before