@@ -1,3 +1,14 @@
+2008-06-09  Ivan Frade  <ivan.frade@nokia.com>
+	
+	* src/libtracker-db/tracker-db-dbus.[ch]:
+	(tracker_dbus_query_result_to_strv) Added new parameter to select
+	the column.
+	* src/trackerd/tracker-files.c
+	* src/trackerd/tracker-keywords.c
+	* src/trackerd/tracker-metadata.c
+	* src/trackerd/tracker-search.c: Updated method calls
+	This fixes the get_registered_metadata method.
+	
 2008-06-09  Carlos Garnacho  <carlos@imendio.com>
 
 	* src/tracker-indexer/tracker-indexer-db.[ch] (tracker_db_set_text):
